load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "common_proto",
    srcs = ["common.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "common_go_proto",
    importpath = "route_plan/server/proto/common",
    proto = ":common_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "common",
    embed = [":common_go_proto"],
    importpath = "route_plan/server/proto/common",
    visibility = ["//visibility:public"],
)
