load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "route_proto",
    srcs = ["route.proto"],
    visibility = ["//visibility:public"],
    deps = ["//server/proto/common:common_proto"],
)

go_proto_library(
    name = "route_go_proto",
    importpath = "route_plan/server/proto/route",
    proto = ":route_proto",
    visibility = ["//visibility:public"],
    deps = ["//server/proto/common"],
)

go_library(
    name = "route",
    embed = [":route_go_proto"],
    importpath = "route_plan/server/proto/route",
    visibility = ["//visibility:public"],
)
